opengl/egldisplay: fix the check for EGL_EXT_device_query

It's a client extension, not a display extension, so it has to be queried in a
different way.

BUG: 521668